--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ web:
     - QEMU_URLS=http://192.168.99.100:8001/
     - YCM_URLS=http://192.168.99.100:8002/
     - PUBLIC_URL=http://192.168.99.100/
+    - LIBPEBBLE_PROXY=wss://cloudpebble-ws.herokuapp.com/tool
 celery:
   build: cloudpebble/
   volumes:
