here I go again on my own. Down the only road I've ever known.

--- a/cloudpebble/Dockerfile.alpine
+++ b/cloudpebble/Dockerfile.alpine
@@ -1,17 +1,19 @@
-FROM python:2.7.16-buster
-SHELL ["/bin/bash", "-c"]
+FROM jfloff/alpine-python:2.7
+ENV NPM_CONFIG_LOGLEVEL=info NODE_VERSION=10.15.3 DJANGO_VERSION=1.6 NODEJS_CHECK_SIGNATURES=no
 
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
-  apt-get install -y nodejs
+RUN apk upgrade --no-cache && apk add --no-cache gettext curl nano postgresql-dev \
+ postgresql-client libpq bash py2-pip build-base zlib-dev jpeg-dev git gnupg
+
+RUN curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz" \
+  && curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
+  && grep " node-v$NODE_VERSION-linux-x64.tar.gz\$" SHASUMS256.txt.asc | sha256sum -c - \
+  && tar -xzf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1 \
+  && rm "node-v$NODE_VERSION-linux-x64.tar.gz" SHASUMS256.txt.asc
 
 RUN npm install -g npm jshint jslint
 
 # Django stuff
-RUN apt-get update && apt-get install -y \
-    gettext memcached postgresql-client libpq-dev \
-    --no-install-recommends && rm -rf /var/lib/apt/lists/*
-
-RUN pip install psycopg2 django==1.6.3
+RUN pip install psycopg2 django==1.6.2
 
 EXPOSE 8000
 
@@ -20,7 +22,8 @@ RUN npm install -g bower && echo '{"allow_root": true}' > /root/.bowerrc
 
 # Grab the toolchain
 RUN mkdir /arm-cs-tools && \
-  curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
+  curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-test-strip.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
+
 
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
@@ -35,6 +38,7 @@ RUN mkdir /sdk3 && \
 
 # Install SDK 3 Node dependencies
 RUN cd /sdk3 && npm install
+
 ENV WAF_NODE_PATH=/sdk3/node_modules
 
 COPY . /code
@@ -45,5 +49,4 @@ RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install &
 RUN python manage.py compilemessages
 RUN make -C /code/c-preload
 
-RUN service memcached start
 CMD ["sh", "docker_start.sh"]
