--- a/cloudpebble/app.json
+++ b/cloudpebble/app.json
@@ -32,12 +32,12 @@
     "QEMU_LAUNCH_AUTH_HEADER": {
       "required": true
     },
-    "QEMU_URLS": "http://207.148.15.25/qemu-us1.cloudpebble.net/",
+    "QEMU_URLS": "http://$MYIP/qemu-us1.cloudpebble.net/",
     "SDK2_PEBBLE_WAF": "/app/sdk2/pebble/waf",
     "SDK3_PEBBLE_WAF": "/app/sdk3/pebble/waf",
     "TYPOGRAPHY_CSS": "//cloud.typography.com/7515512/745724/css/fonts.css",
     "WEB_CONCURRENCY": "2",
-    "YCM_URLS": "https://207.148.15.25/ycm1.cloudpebble.net/"
+    "YCM_URLS": "https://$MYIP/ycm1.cloudpebble.net/"
   },
   "addons": [
     "papertrail:choklad",
