--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: cloudpebble/
-    restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
@@ -13,40 +13,40 @@ services:
       - s3
       - qemu
       - ycmd
+    env_file:
+      - ./.env
     environment:
       - DEBUG="yes"
       - RUN_WEB="yes"
       - AWS_ENABLED="yes"
       - PORT=80
-      - AWS_S3_FAKE_S3=207.148.15.25:8003
-      - MEDIA_URL=http://207.148.15.25:8003/builds.cloudpebble.net/
-      - QEMU_URLS=http://207.148.15.25:8001/
-      - YCM_URLS=http://207.148.15.25:8002/
-      - PUBLIC_URL=http://207.148.15.25/
+      - AWS_S3_FAKE_S3=$MYIP:8003
+      - MEDIA_URL=http://$MYIP:8003/builds.cloudpebble.net/
+      - QEMU_URLS=http://$MYIP:8001/
+      - YCM_URLS=http://$MYIP:8002/
+      - PUBLIC_URL=http://$MYIP/
       - LIBPEBBLE_PROXY=wss://cloudpebble-ws.herokuapp.com/tool
       - PEBBLE_AUTH_URL=https://auth.rebble.io
-    env_file:
-      - ./.env
   celery:
     build: cloudpebble/
-    restart: always
+    restart: unless-stopped
     volumes:
       - "./cloudpebble/:/code"
     links:
       - redis
       - postgres
       - s3
+    env_file:
+      - ./.env
     environment:
       - DEBUG="yes"
       - RUN_CELERY="yes"
       - AWS_ENABLED=yes
-      - EXPORT_ROOT=http://207.148.15.25:8003/export.cloudpebble.net/
-      - AWS_S3_FAKE_S3=207.148.15.25:8003
-    env_file:
-      - ./.env
+      - EXPORT_ROOT=http://$MYIP:8003/export.cloudpebble.net/
+      - AWS_S3_FAKE_S3=$MYIP:8003
   qemu:
     build: cloudpebble-qemu-controller/
-    restart: always
+    restart: unless-stopped
     volumes:
       - "./cloudpebble-qemu-controller/:/code"
     env_file:
@@ -55,7 +55,7 @@ services:
       - "8001:80"
   ycmd:
     build: cloudpebble-ycmd-proxy/
-    restart: always
+    restart: unless-stopped
     volumes:
       - "./cloudpebble-ycmd-proxy/:/code"
     env_file:
@@ -65,19 +65,28 @@ services:
   redis:
     #image: redis
     image: redis:alpine
-    restart: always
+    restart: unless-stopped
+    volumes:
+      - "./data/redis:/data"
   postgres:
     #image: postgres
     image: postgres:11-alpine
-    restart: always
+    restart: unless-stopped
+    volumes: 
+      - "./data//postgres:/var/lib/postgresql/data"
   s3:
-    image: lphoward/fake-s3
+    #image: lphoward/fake-s3
+    build: fakes3/
+    restart: unless-stopped
+    volumes:
+      - "./data/fakes3/:/fakes3_root"
     env_file:
       - ./.env
     ports:
       - "8003:4569"
   memecached:
-    image: memcached:latest
-    restart: always
+    #image: memcached:latest
+    build: ./memcached/
+    restart: unless-stopped
     ports:
       - "11211:11211"
