--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,9 +1,9 @@
-Django==1.6.3
-django-registration>=1.0
-amqp>=1.4.9
+Django==1.6.2
+django-registration==1.0
+amqp<2.0,>=1.4.9
 celery==3.1.25
-django-celery==3.3.1
-flup6==1.0.3
+django-celery==3.1.17
+flup6==1.1.1
 psycopg2==2.8.3
 South==1.0.2
 qrcode==6.1
@@ -17,15 +17,15 @@ gevent>=1.3
 psycogreen>=1.0
 requests>=2.22.0
 oauth2client==1.5.1
-django-bower>=5.1.0
+django-bower==5.0.4
 mock==2.0.0
 # This is used for Mailchimp integration
 #mailchimp==2.0.9
 
 # These are used for Heroku hosting setup.
-dj-static>=0.0.6
+dj-static==0.0.6
 gunicorn>=19.5.0
-dj-database-url>=0.3.0
+dj-database-url==0.3.0
 newrelic>=2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
@@ -35,20 +35,20 @@ pypng>=0.0.17
 
 # Additional requirements
 anyjson>=0.3.3
-billiard>=3.3.0.23
+billiard<3.4,>=3.3.0.23
 docopt==0.4.0
 greenlet>=0.4.14
 httplib2>=0.9.2
-kombu>=3.0.35
-oauthlib>=1.0.3
+kombu<3.1,>=3.0.37
+oauthlib==1.0.3
 pyasn1>=0.1.7
 pyasn1-modules>=0.0.5
 python-openid>=2.2.5
 pytz>=2016.3
-requests-oauthlib>=0.6.1
+requests-oauthlib==0.6.1
 rsa>=3.4.2
 six>=1.10.0
-static3>=0.6.1
+static3==0.6.1
 python-memcached
 django-extensions==1.6.7
 #git+https://github.com/epineda/django-yarn
