--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -3,7 +3,7 @@ django-registration==1.0
 amqp<2.0,>=1.4.9
 celery==3.1.25
 django-celery==3.1.17
-flup6==1.1.1
+flup==1.0.3.dev-20110405
 psycopg2==2.8.3
 South==1.0.2
 qrcode==6.1
@@ -12,10 +12,10 @@ pygithub==1.14.2
 python-social-auth==0.1.23
 redis==2.10.5
 boto==2.49.0
-boto3==1.4.4
-gevent>=1.3
-psycogreen>=1.0
-requests>=2.22.0
+#boto3==1.4.4
+gevent==1.1
+psycogreen==1.0
+requests==2.22.0
 oauth2client==1.5.1
 django-bower==5.0.4
 mock==2.0.0
@@ -24,35 +24,35 @@ mock==2.0.0
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
-gunicorn>=19.5.0
+gunicorn==19.5.0
 dj-database-url==0.3.0
-newrelic>=2.50.0.39
+newrelic==2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
-freetype-py>=1.0
-sh>=1.08
-pypng>=0.0.17
+freetype-py==1.0
+sh==1.08
+pypng==0.0.17
 
 # Additional requirements
-anyjson>=0.3.3
+anyjson==0.3.3
 billiard<3.4,>=3.3.0.23
 docopt==0.4.0
-greenlet>=0.4.14
-httplib2>=0.9.2
+greenlet==0.4.14
+httplib2==0.9.2
 kombu<3.1,>=3.0.37
 oauthlib==1.0.3
-pyasn1>=0.1.7
-pyasn1-modules>=0.0.5
-python-openid>=2.2.5
-pytz>=2016.3
+pyasn1==0.1.7
+pyasn1-modules==0.0.5
+python-openid==2.2.5
+pytz==2016.3
 requests-oauthlib==0.6.1
-rsa>=3.4.2
-six>=1.10.0
+rsa==3.4.2
+six==1.10.0
 static3==0.6.1
 python-memcached
 django-extensions==1.6.7
 #git+https://github.com/epineda/django-yarn
-django-storages==1.5.0
+#django-storages==1.5.0
 #django-acme-challenge
-Werkzeug>=0.15.6
-pyOpenSSL>=19.0.0
+Werkzeug==0.15.6
+pyOpenSSL==19.0.0
