--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,8 +75,8 @@ services:
     volumes: 
       - "./data//postgres:/var/lib/postgresql/data"
   s3:
-    image: lphoward/fake-s3
-    #build: fakes3/
+    #image: lphoward/fake-s3
+    build: fakes3/
     restart: unless-stopped
     volumes:
       - "./data/fakes3/:/fakes3_root"
@@ -85,8 +85,8 @@ services:
     ports:
       - "8003:4569"
   memecached:
-    image: memcached:latest
-    #build: ./memcached/
+    #image: memcached:latest
+    build: ./memcached/
     restart: unless-stopped
     ports:
       - "11211:11211"
