I'll be damned. it works again!!!

--- a/cloudpebble/app.json
+++ b/cloudpebble/app.json
@@ -25,19 +25,19 @@
       "required": true
     },
     "LIBPEBBLE_PROXY": "wss://cloudpebble-ws.herokuapp.com/tool",
-    "MAINTENANCE_PAGE_URL": "//static.cloudpebble.net/maintenance/back-soon.html",  
+    "MAINTENANCE_PAGE_URL": "//static.cloudpebble.net/maintenance/back-soon.html",
     "PEBBLE_TOOL": "/app/sdk2/bin/pebble",
     "PUBLIC_URL": "/",
     "PYTHONPATH": "nah",
     "QEMU_LAUNCH_AUTH_HEADER": {
       "required": true
     },
-    "QEMU_URLS": "http://$MYIP/qemu-us1.cloudpebble.net/",
+    "QEMU_URLS": "http://172.245.74.113/qemu-us1.cloudpebble.net/",
     "SDK2_PEBBLE_WAF": "/app/sdk2/pebble/waf",
     "SDK3_PEBBLE_WAF": "/app/sdk3/pebble/waf",
     "TYPOGRAPHY_CSS": "//cloud.typography.com/7515512/745724/css/fonts.css",
     "WEB_CONCURRENCY": "2",
-    "YCM_URLS": "https://$MYIP/ycm1.cloudpebble.net/"
+    "YCM_URLS": "https://172.245.74.113/ycm1.cloudpebble.net/"
   },
   "addons": [
     "papertrail:choklad",
