--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,11 @@ services:
       - RUN_WEB="yes"
       - AWS_ENABLED="yes"
       - PORT=80
-      - AWS_S3_FAKE_S3=$MYIP:8003
-      - MEDIA_URL=http://$MYIP:8003/builds.cloudpebble.net/
-      - QEMU_URLS=http://$MYIP:8001/
-      - YCM_URLS=http://$MYIP:8002/
-      - PUBLIC_URL=http://$MYIP/
+      - AWS_S3_FAKE_S3=172.245.74.113:8003
+      - MEDIA_URL=http://172.245.74.113:8003/builds.cloudpebble.net/
+      - QEMU_URLS=http://172.245.74.113:8001/
+      - YCM_URLS=http://172.245.74.113:8002/
+      - PUBLIC_URL=http://172.245.74.113/
       - LIBPEBBLE_PROXY=wss://cloudpebble-ws.herokuapp.com/tool
       - PEBBLE_AUTH_URL=https://auth.rebble.io
   celery:
@@ -42,8 +42,8 @@ services:
       - DEBUG="yes"
       - RUN_CELERY="yes"
       - AWS_ENABLED=yes
-      - EXPORT_ROOT=http://$MYIP:8003/export.cloudpebble.net/
-      - AWS_S3_FAKE_S3=$MYIP:8003
+      - EXPORT_ROOT=http://172.245.74.113:8003/export.cloudpebble.net/
+      - AWS_S3_FAKE_S3=172.245.74.113:8003
   qemu:
     build: cloudpebble-qemu-controller/
     restart: unless-stopped
