yeah stuff and yeah yeah

--- a/cloudpebble-qemu-controller/Dockerfile.alpine
+++ b/cloudpebble-qemu-controller/Dockerfile.alpine
@@ -1,38 +1,51 @@
-FROM jfloff/alpine-python:2.7
+#FROM python:2.7.16
+FROM gfunkmonk/python:cloudpebble-base-alpine
+SHELL ["/bin/bash", "-c"]
 
-RUN apk upgrade --no-cache && apk add --no-cache glib-dev pixman-dev libfdt dtc-dev \
- gnutls-dev git curl bash py2-setuptools py2-virtualenv build-base python2-dev
+RUN apk update && apk add --no-cache --virtual .build-deps \ 
+musl-dev \
+gcc \
+make \
+pixman-dev \
+dtc-dev \
+gnutls-dev \
 
-RUN mkdir /qemu && cd /qemu && \
- curl -L https://github.com/gfunkmonk/qemu/archive/v2.5.0-pebble5b.tar.gz | tar xz --strip 1 && \
- ./configure \
-#    --enable-tcg-interpreter \
-    --extra-ldflags=-g \
-#    --with-coroutine=gthread \
-#    --enable-debug-tcg \
-    --enable-debug --disable-werror --target-list="arm-softmmu" \
-    --disable-libiscsi --disable-libnfs --disable-libusb --disable-usb-redir \
-    --disable-strip --disable-xen --disable-kvm --disable-user --disable-docs \
-    --disable-gtk --disable-linux-aio --disable-curl --disable-curses --disable-vhdx \
-#    --extra-cflags=-DDEBUG_CLKTREE
-#    --extra-cflags=-DDEBUG_STM32_RCC \
-#    --extra-cflags=-DDEBUG_STM32_UART \
-#    --extra-cflags=-DDEBUG_GIC
-    --extra-cflags=-DSTM32_UART_NO_BAUD_DELAY \
-    --extra-cflags=-DSTM32_UART_ENABLE_OVERRUN \
-    --enable-vnc \
-    --disable-sdl \
+RUN apk add --no-cache py2-virtualenv 
+
+RUN git clone https://github.com/gfunkmonk/qemu && cd /qemu && \
+#RUN mkdir /qemu && cd /qemu && \
+#  curl -L https://github.com/gfunkmonk/qemu/archive/v2.5.0-pebble5.tar.gz | tar xz --strip 1 && \
+  ./configure \
+#     --enable-tcg-interpreter \
+     --extra-ldflags=-g \
+#     --with-coroutine=gthread \
+#     --enable-debug-tcg \
+     --enable-debug --disable-werror --target-list="arm-softmmu" \
+#     --disable-libiscsi --disable-libnfs --disable-libusb --disable-usb-redir \
+#     --disable-strip --disable-xen --disable-kvm --disable-user --disable-docs \
+#     --disable-gtk --disable-linux-aio --disable-curl --disable-curses --disable-vhdx \
+#     --extra-cflags=-DDEBUG_CLKTREE \
+#     --extra-cflags=-DDEBUG_STM32_RCC \
+#     --extra-cflags=-DDEBUG_STM32_UART \
+#     --extra-cflags=-DDEBUG_GIC \
+#     --extra-cflags=-std=gnu99 \
+#     --extra-cflags=-Wno-declaration-after-statement \
+#     --extra-cflags=-Wno-old-style-declaration \
+#     --extra-cflags=-DSTM32_UART_NO_BAUD_DELAY \
+#     --extra-cflags=-DSTM32_UART_ENABLE_OVERRUN \
+#     --enable-vnc \
+#     --disable-sdl \
 	&& \
   make clean && \
   make -j4
 
 #RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch v1.1.1 --recursive
-RUN git clone https://github.com/gfunkmonk/pypkjs.git --depth 1 --branch master --recursive
+RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch master --recursive
 
 RUN virtualenv /pypkjs/.env && . /pypkjs/.env/bin/activate && pip install -r /pypkjs/requirements.txt
 
 RUN mkdir /qemu-tintin-images && cd /qemu-tintin-images && \
-  curl -L https://github.com/gfunkmonk/qemu-tintin-images/archive/v4.3.tar.gz | tar xz --strip 1
+  curl -L https://github.com/pebble/qemu-tintin-images/archive/v4.3.tar.gz | tar xz --strip 1
 
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
@@ -44,5 +57,7 @@ ENV QEMU_DIR=/qemu QEMU_BIN=/qemu/arm-softmmu/qemu-system-arm PKJS_BIN=/pypkjs/p
   PKJS_VIRTUALENV=/pypkjs/.env QCON_PORT=80 QEMU_IMAGE_ROOT=/qemu-tintin-images
 
 EXPOSE $QCON_PORT
+
+RUN apk del .build-deps
 
 CMD ["python", "controller.py"]
