--- a/cloudpebble-ycmd-proxy/Dockerfile.alpine
+++ b/cloudpebble-ycmd-proxy/Dockerfile.alpine
@@ -1,43 +1,23 @@
-FROM jfloff/alpine-python:2.7
+#FROM python:2.7.16
+FROM gfunkmonk/python:cloudpebble-base-alpine
+SHELL ["/bin/bash", "-c"]
 
-RUN apk upgrade --no-cache && apk add --no-cache git cmake ncurses5-libs \
- curl py2-pip python2-dev build-base clang-dev
+RUN apk update && apk add --no-cache --virtual .build-deps \
+cmake \
+gcc \
+ncurses-dev
 
 # ycmd
-RUN git clone https://github.com/gfunkmonk/ycmd.git -b cloudpebble /ycmd && cd /ycmd && \
+RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
+  git reset --hard c5ae6c2915e9fb9f7c18b5ec9bf8627d7d5456fd && \
   git submodule update --init --recursive && \
   ./build.sh --clang-completer
 
 # Grab the toolchain
-RUN mkdir /arm-cs-tools && \
-  curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-test-strip.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
+RUN mkdir /arm-cs-tools && curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
 
-# Node stuff.
-ENV NODE_VERSION=4.4.5 NPM_CONFIG_LOGLEVEL=info
-
-# gpg keys listed at https://github.com/nodejs/node
-RUN set -ex \
-  && for key in \
-    9554F04D7259F04124DE6B476D5A82AC7E37093B \
-    94AE36675C464D64BAFA68DD7434390BDBE9B9C5 \
-    0034A06D9D9B0064CE8ADF6BF1747F4AD2306D93 \
-    FD3A5288F042B6850C66B31F09FE44734EB7990E \
-    71DCFD284A79C3B38668286BC97EC7A07EDE3FC1 \
-    DD8F2338BAE7501E3DD5AC78C273792F7D83545D \
-    C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
-    B9AE9905FFD7803F25714661B63B535A4C206CA9 \
-  ; do \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
-  done
-
-RUN curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz" \
-  && curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
-  && gpg --verify SHASUMS256.txt.asc \
-  && grep " node-v$NODE_VERSION-linux-x64.tar.gz\$" SHASUMS256.txt.asc | sha256sum -c - \
-  && tar -xzf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1 \
-  && rm "node-v$NODE_VERSION-linux-x64.tar.gz" SHASUMS256.txt.asc
-
-RUN npm install npm -g
+RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
+  apt-get install -y nodejs
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
@@ -60,4 +40,5 @@ ENV PATH="$PATH:/arm-cs-tools/bin" YCMD_PEBBLE_SDK2=/sdk2/ YCMD_PEBBLE_SDK3=/sdk
   DEBUG=yes YCMD_PORT=80 YCMD_BINARY=/ycmd/ycmd/__main__.py \
   YCMD_DEFAULT_SETTINGS=/ycmd/ycmd/default_settings.json
 
+RUN apk del .build-deps
 CMD ["python", "proxy.py"]
