--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,20 +63,20 @@ services:
     ports:
       - "8002:80"
   redis:
-    #image: redis
-    image: redis:alpine
+    image: redis
+    #image: redis:alpine
     restart: unless-stopped
     volumes:
       - "./data/redis:/data"
   postgres:
-    #image: postgres
-    image: postgres:11-alpine
+    image: postgres
+    #image: postgres:11-alpine
     restart: unless-stopped
     volumes: 
       - "./data//postgres:/var/lib/postgresql/data"
   s3:
-    #image: lphoward/fake-s3
-    build: fakes3/
+    image: lphoward/fake-s3
+    #build: fakes3/
     restart: unless-stopped
     volumes:
       - "./data/fakes3/:/fakes3_root"
@@ -85,8 +85,8 @@ services:
     ports:
       - "8003:4569"
   memecached:
-    #image: memcached:latest
-    build: ./memcached/
+    image: memcached:latest
+    #build: ./memcached/
     restart: unless-stopped
     ports:
       - "11211:11211"
