--- a/cloudpebble-qemu-controller/Dockerfile.debian
+++ b/cloudpebble-qemu-controller/Dockerfile.debian
@@ -1,5 +1,5 @@
 #FROM python:2.7.16
-FROM gfunkmonk/python2:bionic
+FROM gfunkmonk/python2:xenial
 SHELL ["/bin/bash", "-c"]
 
 RUN apt-get update && apt-get install -y \
