--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -12,7 +12,7 @@ pygithub==1.14.2
 python-social-auth==0.1.23
 redis==2.10.5
 boto==2.49.0
-gevent==1.1
+gevent==1.3.0
 psycogreen==1.0
 requests==2.22.0
 oauth2client==1.5.1
@@ -34,7 +34,7 @@ pypng==0.0.17
 anyjson==0.3.3
 billiard<3.4,>=3.3.0.23
 docopt==0.4.0
-greenlet==0.4.14
+greenlet>=0.4.14
 httplib2==0.9.2
 kombu<3.1,>=3.0.37
 oauthlib==1.0.3
@@ -47,3 +47,7 @@ rsa==3.4.2
 six==1.10.0
 static3==0.6.1
 python-memcached
+django-uwsgi
+django-websocket
+django-compat
+
