--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -10,7 +10,7 @@ qrcode==6.1
 Pillow==3.3.2
 pygithub==1.14.2
 python-social-auth==0.1.23
-redis==2.10.5
+redis==3.3.8
 boto==2.49.0
 gevent==1.3.0
 psycogreen==1.0
@@ -32,7 +32,7 @@ pypng==0.0.17
 
 # Additional requirements
 anyjson==0.3.3
-billiard<3.4,>=3.3.0.23
+billiard>=3.3.0.23,<3.7
 docopt==0.4.0
 greenlet>=0.4.14
 httplib2==0.9.2
@@ -41,7 +41,7 @@ oauthlib==1.0.3
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 python-openid==2.2.5
-pytz==2016.3
+pytz==2019.2
 requests-oauthlib==0.6.1
 rsa==3.4.2
 six==1.10.0
