--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -56,7 +56,7 @@ RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install &
 RUN python manage.py compilemessages
 RUN make -C /code/c-preload
 
-RUN apk del .build-deps && find /usr/local \
+RUN find /usr/local \
         \( -type d -a -name test -o -name tests \) \
         -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
         -exec rm -rf '{}' + \
