--- a/cloudpebble-ycmd-proxy/Dockerfile
+++ b/cloudpebble-ycmd-proxy/Dockerfile
@@ -1,50 +1,43 @@
-FROM gfunkmonk/cloudpebble:alpine AS squashme
+#FROM python:2.7.16 AS squashme
+#FROM gfunkmonk/dev:xenial AS squashme
+#FROM gfunkmonk/python2:bionic AS squashme
+FROM gfunkmonk/python:bionic-mini2 AS build
 SHELL ["/bin/bash", "-c"]
 
-RUN apk update && apk add --no-cache ncurses5-libs nodejs npm clang && \
-  apk add --no-cache --virtual .build-deps \
-  cmake build-base llvm clang-dev \
-  gcc g++ make libc-dev
+RUN apt-get update && apt-get install -y \
+  cmake libtinfo5 git curl libclang-dev clang \
+   && rm -rf /var/lib/apt/lists/
 
 # ycmd
 RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
   git reset --hard c5ae6c2915e9fb9f7c18b5ec9bf8627d7d5456fd && \
   git submodule update --init --recursive && \
-  ln -s -f /usr/lib/libncurses.so.5.9 /usr/lib/libtinfo.so.5 && \
-  ln -s -f /usr/lib/libclang.so.8 /usr/lib/libclang.so && \
-  cp /usr/lib/libclang.so.8 /ycmd/libclang.so && \
   ./build.sh --clang-completer --system-libclang
+
+FROM gfunkmonk/python:bionic-mini2 AS squashme
+COPY --from=build /ycmd /ycmd
+
+RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
+  apt-get update && apt-get install --no-install-recommends -y \
+  libtinfo5 curl xz-utils nodejs && rm -rf /var/lib/apt/lists/
 
 # Grab the toolchain
 RUN mkdir /arm-cs-tools && curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
 
-# Grab the toolchain
-#RUN curl -o /tmp/arm-cs-tools.tar https://cloudpebble-vagrant.s3.amazonaws.com/arm-cs-tools-stripped.tar && \ 
-#  tar -xf /tmp/arm-cs-tools.tar -C / && rm /tmp/arm-cs-tools.tar
-
 # Install SDK 2
 RUN mkdir /sdk2 && \
-  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-2.9.tar.bz2" | tar --strip-components=1 -xj -C /sdk2
+  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-2.9.tar.bz2" | \
+  tar --strip-components=1 -xj -C /sdk2
 
 # Install SDK 3
 RUN mkdir /sdk3 && \
-  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-4.3.tar.bz2" | tar --strip-components=1 -xj -C /sdk3
+  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-4.3.tar.bz2" | \
+  tar --strip-components=1 -xj -C /sdk3
 
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
-RUN find /usr/local \
-        \( -type d -a -name test -o -name tests \) \
-        -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
-        -exec rm -rf '{}' + \
-    && runDeps="$( \
-        scanelf --needed --nobanner --recursive /usr/local \
-                | awk '{ gsub(/,/, "\nso:", $2); print "so:" $2 }' \
-                | sort -u \
-                | xargs -r apk info --installed \
-                | sort -u \
-    )" \
-    && apk add --virtual .rundeps $runDeps \
-    && apk del .build-deps
+
+RUN apt remove --purge curl xz-utils git -y && apt-get autoremove --purge -y
 
 COPY . /code
 FROM scratch
@@ -57,3 +50,4 @@ ENV PATH="$PATH:/arm-cs-tools/bin" YCMD_PEBBLE_SDK2=/sdk2/ YCMD_PEBBLE_SDK3=/sdk
   YCMD_DEFAULT_SETTINGS=/ycmd/ycmd/default_settings.json
 
 CMD ["python", "proxy.py"]
+
