--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,22 +1,22 @@
 Django==1.6.2
 django-registration==1.0
 amqp<2.0,>=1.4.9
-celery==3.1.25
+celery==3.1.23
 django-celery==3.1.17
 flup==1.0.3.dev-20110405
 psycopg2==2.8.3
 South==1.0.2
 qrcode==6.1
 Pillow==3.3.2
-pygithub==1.43.8
+pygithub==1.14.2
 python-social-auth==0.1.23
-redis==3.3.8
-boto==2.49.0
-gevent==1.3.0
+redis==2.10.5
+boto==2.39.0
+gevent==1.4.0
 psycogreen==1.0
 requests==2.22.0
 oauth2client==1.5.1
-django-bower==5.2.0
+django-bower==5.1.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
@@ -32,19 +32,19 @@ pypng==0.0.17
 
 # Additional requirements
 anyjson==0.3.3
-billiard>=3.3.0.23,<3.7
+billiard<3.4,>=3.3.0.23
 docopt==0.4.0
 greenlet>=0.4.14
-httplib2==0.13.1
+httplib2==0.9.2
 kombu<3.1,>=3.0.37
 oauthlib==1.0.3
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 python-openid==2.2.5
-pytz==2019.2
+pytz==2016.3
 requests-oauthlib==0.6.1
 rsa==3.4.2
-six==1.10.0
+six==1.12.0
 static3==0.6.1
 python-memcached
 django-uwsgi
